--- a/_config.yml
+++ b/_config.yml
@@ -9,37 +9,37 @@ theme: jekyll-theme-chirpy
 lang: en
 
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
-timezone:
+timezone: Pacific Time
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: Tech Work # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: A blog about tech, life, and everything in between. | Striving Tech Wizard # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  The ramblings of my adventures into all things technical, both from a personal and work life perspecitve. Expect everything from topics about Home Labbing, to DevOps and API (all personal interests) 
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
 url: ""
 
 github:
-  username: github_username # change to your GitHub username
+  username: SCipher143 # change to your GitHub username
 
 twitter:
-  username: twitter_username # change to your Twitter username
+  username: SCipher143 # change to your Twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
+  name: SCipher143
   email: example@domain.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your Twitter homepage
-    - https://github.com/username # change to your GitHub homepage
+    - https://twitter.com/SCipher143 # change to your Twitter homepage
+    - https://github.com/SCipher143 # change to your GitHub homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
