--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ avatar: /assets/img/profile.jpg
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
-social_preview_image: <link rel="icon" href="/assets/img/favicons/favicon-96x96.png" type="image/png">
+social_preview_image: 
  # string, local or CORS resources
 
 # boolean type, the global switch for TOC in posts.
