--- a/_config.yml
+++ b/_config.yml
@@ -90,7 +90,7 @@ pageviews:
 #
 theme_mode: # [light | dark]
 
-favicon: /assets/img/favicon.ico
+favicon: /assets/img/favicon.svg
 
 # The CDN endpoint for media resources.
 # Notice that once it is assigned, the CDN url
